# Parcer

./: .gitignore  ARBITRAGE.md  IMPLEMENTATION_SUMMARY.md  README.md  RISK_MANAGER.md  config.example.yml  pyproject.toml  pytest.ini  requirements.txt
data/: trades.csv  trades.db
src/parcer/: __init__.py  app.py  cli.py  config.py  di.py  history.py  logging.py  runtime.py  settings.py
src/parcer/exchanges/: __init__.py  base.py  binance.py  bingx.py  bitget.py  bybit.py  factory.py  gate.py  htx.py  init.py  kucoin.py  mexc.py  normalization.py  okx.py  protocol.py  xt.py
src/parcer/orders/: __init__.py  manager.py  position.py  risk_manager.py
src/parcer/strategy/: __init__.py  scenario_a.py  scenario_b.py  spread_engine.py
tests/: conftest.py  test_arbitrage_simulation.py  test_cli_commands.py  test_exchange_integration.py  test_exchanges.py  test_factory.py  test_history.py  test_normalization.py  test_order_manager.py  test_position.py  test_risk_manager.py  test_scenario_strategies.py  test_spread_engine.py
