[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "parcer"
version = "0.1.0"
description = "Arbitrage bot scaffold"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.6,<3",
  "PyYAML>=6.0.1,<7",
  "aiohttp>=3.8,<4",
]

[project.optional-dependencies]
test = [
  "pytest>=7.0,<8",
  "pytest-asyncio>=0.21,<1",
  "pytest-cov>=4.0,<5",
]
dev = [
  "pytest>=7.0,<8",
  "pytest-asyncio>=0.21,<1",
  "pytest-cov>=4.0,<5",
  "black>=23.0,<24",
  "isort>=5.0,<6",
  "mypy>=1.0,<2",
]

[project.scripts]
parcer = "parcer.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
